--- a/src/app/question/question.html
+++ b/src/app/question/question.html
@@ -1,7 +1,7 @@
 <div *ngIf="question" class="p-4">
   <mat-card>
     <mat-card-header>
-      <mat-card-title class="text-xl font-bold">{{ questionNumber }}. {{ question.questionText }}</mat-card-title>
+      <mat-card-title><h3 class="text-lg font-semibold mb-4">{{ questionNumber }}. {{ question.questionText }}</h3></mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-list role="list">
