--- a/src/app/quiz/quiz.html
+++ b/src/app/quiz/quiz.html
@@ -1,76 +1,1 @@
-<div *ngIf="quizStarted && !quizFinished" class="fixed top-0 left-0 w-full z-10">
-  <mat-progress-bar
-    mode="determinate"
-    [value]="completionPercentage"
-  ></mat-progress-bar>
-</div>
-
-<div class="p-4 sm:p-8 pt-20">
-  <!-- Mode Selection View -->
-  <div *ngIf="!quizStarted && !quizFinished; else quizView">
-    <div class="text-center mb-8">
-      <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <button mat-raised-button color="primary" (click)="selectMode(10)" class="h-24">
-        <mat-icon>flash_on</mat-icon>
-        <span class="ml-2">Quickie (10)</span>
-      </button>
-      <button mat-raised-button color="accent" (click)="selectMode(50)" class="h-24">
-        <mat-icon>psychology</mat-icon>
-        <span class="ml-2">Brain Teaser (50)</span>
-      </button>
-      <button mat-raised-button color="warn" (click)="selectMode(100)" class="h-24">
-        <mat-icon>school</mat-icon>
-        <span class="ml-2">Scholar (100)</span>
-      </button>
-      <button mat-raised-button (click)="selectMode('all')" class="h-24">
-        <mat-icon>fitness_center</mat-icon>
-        <span class="ml-2">Marathon (All)</span>
-      </button>
-    </div>
-  </div>
-
-  <!-- Quiz and Results View -->
-  <ng-template #quizView>
-    <!-- Quiz View -->
-    <div *ngIf="!quizFinished; else resultsView">
-      <div class="flex justify-end mb-4">
-        <button mat-stroked-button color="warn" (click)="exitQuiz()">Exit Quiz</button>
-      </div>
-      <div *ngFor="let question of paginatedQuestions; let i = index">
-        <app-question
-          [questionNumber]="currentPage * questionsPerPage + i + 1"
-          [question]="question"
-          (answer)="onAnswer($event)"
-        ></app-question>
-      </div>
-
-      <div class="flex justify-between mt-4">
-        <button mat-stroked-button (click)="prevPage()" [disabled]="currentPage === 0">
-          Previous
-        </button>
-        <span>Page {{ currentPage + 1 }} of {{ totalPages }}</span>
-        <button mat-stroked-button (click)="nextPage()" [disabled]="currentPage >= totalPages - 1">
-          Next
-        </button>
-      </div>
-
-      <div class="mt-4 text-center">
-        <button mat-raised-button color="primary" (click)="submitQuiz()" [disabled]="!isLastPage()">
-          Submit Quiz
-        </button>
-      </div>
-    </div>
-
-    <!-- Results View -->
-    <ng-template #resultsView>
-      <app-results
-        [score]="score"
-        [totalQuestions]="totalQuestions"
-        [missedAreas]="missedAreas"
-        (restart)="restartQuiz()"
-      ></app-results>
-    </ng-template>
-  </ng-template>
-</div>
+<router-outlet></router-outlet>
