--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,25 +1,4 @@
-<div *ngIf="isAuthenticated; else passwordPrompt">
-  <div *ngIf="selectedView === 'checklist'" class="container mx-auto mt-12">
-    <h1 class="text-2xl sm:text-3xl font-bold text-center">
-      Dormitory Inspection/Quiz
-    </h1>
-    <app-navigation
-      [selectedView]="selectedView"
-      (viewSelected)="onViewSelected($event)"
-    ></app-navigation>
-    <app-checklist id="checklist-container"></app-checklist>
-  </div>
-
-  <div *ngIf="selectedView === 'quiz'" class="container mx-auto mt-12">
-    <h1 class="text-2xl sm:text-3xl font-bold text-center">Quiz</h1>
-    <app-navigation
-      [selectedView]="selectedView"
-      (viewSelected)="onViewSelected($event)"
-    ></app-navigation>
-    <app-quiz #quiz></app-quiz>
-  </div>
-</div>
-
-<ng-template #passwordPrompt>
-  <app-password (authenticated)="onAuthenticated($event)"></app-password>
-</ng-template>
+<main [class.pt-20]="isQuizRunning">
+  <app-navigation></app-navigation>
+  <router-outlet></router-outlet>
+</main>
