--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -1,6 +1,6 @@
 <div class="password-container">
   <div *ngIf="!showError" class="password-form">
-    <h2>What <span class="text-green-500">rocks?</span></h2>
+    <h2>What <span class="text-green-500">rocks?</span> (think mascots)</h2>
     <mat-form-field appearance="outline">
       <mat-label>Answer</mat-label>
       <input matInput type="password" [(ngModel)]="password" (keyup.enter)="checkPassword()" cdkFocusInitial>
@@ -8,7 +8,7 @@
     <button mat-raised-button color="primary" (click)="checkPassword()" >Submit</button>
   </div>
   <div *ngIf="showError" class="error-screen">
-    <h2 class="mat-headline-5">Looks like you don't rock :( Some mascots are better than others...</h2>
+    <h2 class="mat-headline-5">Looks like you don't rock :( Some rocks are better than others...</h2>
     <button mat-stroked-button color="warn" (click)="tryAgain()">Try Again</button>
   </div>
 </div>
