Improves UI and adds progress bar functionality
Enhances the user interface with a toolbar for navigation and adds a progress bar to indicate completion status in both the checklist and quiz sections.

The progress bar visibility is controlled by a new `LayoutService`, ensuring it is displayed during checklist and quiz activities and hidden otherwise.
Additionally, shuffles quiz answers for a more varied experience.

--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -1,4 +1,4 @@
-<div class="text-center mb-8">
+<div class="text-center mb-8 mt-4">
   <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
 </div>
 <mat-list role="list">
