--- a/src/app/quiz-runner/quiz-runner.html
+++ b/src/app/quiz-runner/quiz-runner.html
@@ -1,5 +1,6 @@
 <div *ngIf="!quizFinished" class="fixed top-0 left-0 w-full z-10">
   <mat-progress-bar
+    color="accent"
     mode="determinate"
     [value]="completionPercentage"
   ></mat-progress-bar>
