--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<main [class.pt-20]="isQuizRunning">
-  <app-navigation *ngIf="!isHomePage"></app-navigation>
+<app-navigation *ngIf="!isHomePage"></app-navigation>
+<main [class.pt-2]="showProgressBar">
   <router-outlet></router-outlet>
 </main>
