--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,6 @@
-<div class="flex justify-center my-12">
-  <a mat-raised-button routerLink="/checklist" routerLinkActive="mat-primary">Checklist</a>
-  <a mat-raised-button routerLink="/quiz" routerLinkActive="mat-primary" class="ml-2">Quiz</a>
-
-</div>
+<mat-toolbar color="primary">
+  <span>Dorm Inspection & Quiz</span>
+  <span class="toolbar-spacer"></span>
+  <a mat-button routerLink="/checklist" routerLinkActive="active-link">Checklist</a>
+  <a mat-button routerLink="/quiz" routerLinkActive="active-link">Quiz</a>
+</mat-toolbar>
