feat: implement checklist component with progress tracking and search functionality

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <app-navigation *ngIf="!isHomePage"></app-navigation>
-<main [class.pt-2]="showProgressBar">
+<main class="pt-16" [class.pt-20]="showProgressBar">
   <router-outlet></router-outlet>
 </main>
