feat: implement core app layout with navigation and checklist components

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
-<app-navigation *ngIf="!isHomePage"></app-navigation>
-<main class="pt-16" [class.pt-20]="showProgressBar">
+<div class="fixed top-0 left-0 right-0 z-20">
+  <app-navigation *ngIf="!isHomePage"></app-navigation>
+</div>
+<main class="pt-16" [class.pt-28]="showProgressBar">
   <router-outlet></router-outlet>
 </main>
