--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Dorm Inspection & Quiz</span>
+  <span>Dorm Inspection & Quiz (by OT Sim)</span>
   <span class="toolbar-spacer"></span>
   <a mat-button routerLink="/checklist" routerLinkActive="active-link">Checklist</a>
   <a mat-button routerLink="/quiz" routerLinkActive="active-link">Quiz</a>
