--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -2,22 +2,22 @@
   <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
 </div>
 <mat-list role="list">
-  <mat-list-item role="listitem" (click)="selectMode(10)" class="cursor-pointer h-20">
+  <mat-list-item role="listitem" (click)="selectMode(10)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
     <mat-icon matListItemIcon>flash_on</mat-icon>
     <div matListItemTitle>Quickie</div>
     <div matListItemLine>10 questions</div>
   </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode(50)" class="cursor-pointer h-20">
+  <mat-list-item role="listitem" (click)="selectMode(50)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
     <mat-icon matListItemIcon>psychology</mat-icon>
     <div matListItemTitle>Brain Teaser</div>
     <div matListItemLine>50 questions</div>
   </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode(100)" class="cursor-pointer h-20">
+  <mat-list-item role="listitem" (click)="selectMode(100)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
     <mat-icon matListItemIcon>school</mat-icon>
     <div matListItemTitle>Scholar</div>
     <div matListItemLine>100 questions</div>
   </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode('all')" class="cursor-pointer h-20">
+  <mat-list-item role="listitem" (click)="selectMode('all')" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
     <mat-icon matListItemIcon>fitness_center</mat-icon>
     <div matListItemTitle>Marathon</div>
     <div matListItemLine>All questions</div>
