--- a/src/app/results/results.html
+++ b/src/app/results/results.html
@@ -13,13 +13,13 @@
           <!-- Section Column -->
           <ng-container matColumnDef="section">
             <th mat-header-cell *matHeaderCellDef> Section </th>
-            <td mat-cell *matCellDef="let element"> {{element.section}} </td>
+            <td mat-cell *matCellDef="let element" data-label="Section">{{element.section}}</td>
           </ng-container>
 
           <!-- Count Column -->
           <ng-container matColumnDef="count">
             <th mat-header-cell *matHeaderCellDef> Incorrect Answers </th>
-            <td mat-cell *matCellDef="let element"> {{element.count}} </td>
+            <td mat-cell *matCellDef="let element" data-label="Incorrect Answers">{{element.count}}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -28,8 +28,8 @@
       </div>
 
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="onRestart()" class="mt-6">
+    <mat-card-actions class="flex justify-center">
+      <button mat-raised-button color="primary" (click)="onRestart()" class="my-4">
         Restart Quiz
       </button>
     </mat-card-actions>
