--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -1,7 +1,13 @@
 <div class="text-center mb-8 mt-4">
   <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
 </div>
-<mat-list role="list">
+<div class="my-4 text-center">
+    <a mat-stroked-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=wQBWtp" target="_blank" rel="noopener noreferrer">
+      <mat-icon>menu_book</mat-icon>
+      Open Study Guide
+    </a>
+  </div>
+  <mat-list role="list">
   <mat-list-item role="listitem" (click)="selectMode(10)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
     <mat-icon matListItemIcon>flash_on</mat-icon>
     <div matListItemTitle>Quickie</div>
