--- a/src/app/results/results.html
+++ b/src/app/results/results.html
@@ -7,7 +7,13 @@
       <p class="text-lg mt-4">You scored {{ score }} out of {{ totalQuestions }}</p>
 
       <div *ngIf="missedAreas && missedAreas.length > 0" class="mt-8">
-        <h3 class="text-xl font-semibold mb-4">Areas to Study</h3>
+        <div class="flex justify-between items-center mb-4">
+          <h3 class="text-xl font-semibold">Areas to Study</h3>
+          <a mat-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=wQBWtp" target="_blank" rel="noopener noreferrer">
+            <mat-icon>menu_book</mat-icon>
+            Study Guide
+          </a>
+        </div>
         <table mat-table [dataSource]="missedAreas" class="mat-elevation-z8 w-full">
 
           <!-- Section Column -->
