--- a/src/app/question/question.scss
+++ b/src/app/question/question.scss
@@ -1,4 +1,21 @@
 .quiz-option {
+  &.correct-answer {
+    background-color: #22c55e; // Tailwind green-500
+    color: white;
+    opacity: 0.7;
+  }
+
+  &.incorrect-answer {
+    background-color: #ef4444; // Tailwind red-500
+    color: white;
+    opacity: 0.7;
+  }
+
+  &.unselected-hover:hover {
+    background-color: #6b7280; // Tailwind gray-500
+    color: white;
+  }
+
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
   display: flex;
