Updates study guide URL
Updates the study guide URL to ensure users are directed to the most current version of the document. The previous URL had expired.

--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -2,7 +2,7 @@
   <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
 </div>
 <div class="my-4 text-center">
-    <a mat-stroked-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=wQBWtp" target="_blank" rel="noopener noreferrer">
+    <a mat-stroked-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=iVhnOk" target="_blank" rel="noopener noreferrer">
       <mat-icon>menu_book</mat-icon>
       Open Study Guide
     </a>
