--- a/src/app/results/results.html
+++ b/src/app/results/results.html
@@ -9,7 +9,7 @@
       <div *ngIf="missedAreas && missedAreas.length > 0" class="mt-8">
         <div class="flex justify-between items-center mb-4">
           <h3 class="text-xl font-semibold">Areas to Study</h3>
-          <a mat-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=wQBWtp" target="_blank" rel="noopener noreferrer">
+          <a mat-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=iVhnOk" target="_blank" rel="noopener noreferrer">
             <mat-icon>menu_book</mat-icon>
             Study Guide
           </a>
