--- a/src/app/quiz-runner/quiz-runner.html
+++ b/src/app/quiz-runner/quiz-runner.html
@@ -43,7 +43,7 @@
       [score]="score"
       [totalQuestions]="totalQuestions"
       [missedAreas]="missedAreas"
-      (restart)="restartQuiz()"
+      (restart)="exitQuiz()"
     ></app-results>
   </div>
 </div>
