--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -36,7 +36,14 @@
 </mat-list>
 
 <div class="text-center my-8">
-  <h3 class="text-xl font-bold">Mastery Progress</h3>
+  <h3 class="text-xl font-bold">
+    Mastery Progress
+    <mat-icon
+      class="align-middle text-gray-500 ml-1"
+      matTooltip="A question is 'mastered' when you answer it correctly twice in a row."
+      >info_outline</mat-icon
+    >
+  </h3>
   <p class="text-lg">{{ masteredQuestions }} / {{ totalQuestions }} questions mastered</p>
 </div>
 
