--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -1,40 +1,3 @@
-<div class="text-center mb-8 mt-4">
-  <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
-</div>
-<div class="my-4 text-center">
-    <a mat-stroked-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=iVhnOk" target="_blank" rel="noopener noreferrer">
-      <mat-icon>menu_book</mat-icon>
-      Open Study Guide
-    </a>
-  </div>
-  <mat-list role="list" class="centered-list">
-  <mat-list-item role="listitem" (click)="selectMode(10)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
-    <mat-icon class="my-2">flash_on</mat-icon>
-    <div matListItemTitle>Quickie</div>
-    <div matListItemLine>10 questions</div>
-  </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode(50)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
-    <mat-icon class="my-2">psychology</mat-icon>
-    <div matListItemTitle>Brain Teaser</div>
-    <div matListItemLine>50 questions</div>
-  </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode(100)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
-    <mat-icon class="my-2">school</mat-icon>
-    <div matListItemTitle>Scholar</div>
-    <div matListItemLine>100 questions</div>
-  </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode('all')" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
-    <mat-icon class="my-2">fitness_center</mat-icon>
-    <div matListItemTitle>Marathon</div>
-    <div matListItemLine>All questions</div>
-  </mat-list-item>
-  <mat-list-item role="listitem" (click)="selectMode('incorrect')" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
-    <mat-icon class="my-2">replay</mat-icon>
-    <div matListItemTitle>Prioritize Incorrect</div>
-    <div matListItemLine>Focus on questions you've missed</div>
-  </mat-list-item>
-</mat-list>
-
 <div class="text-center my-8">
   <h3 class="text-xl font-bold">
     Mastery Progress
@@ -44,14 +7,81 @@
       >info_outline</mat-icon
     >
   </h3>
-  <p class="text-lg">{{ masteredQuestions }} / {{ totalQuestions }} questions mastered</p>
+  <p class="text-lg">
+    {{ masteredQuestions }} / {{ totalQuestions }} questions mastered
+  </p>
 </div>
+<div class="text-center mb-8 mt-4">
+  <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
+</div>
+<div class="my-4 text-center">
+  <a
+    mat-stroked-button
+    href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=iVhnOk"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    <mat-icon>menu_book</mat-icon>
+    Open Study Guide
+  </a>
+</div>
+<mat-list role="list" class="centered-list">
+  <mat-list-item
+    role="listitem"
+    (click)="selectMode(10)"
+    class="cursor-pointer h-auto py-4 px-2 sm:px-6"
+  >
+    <mat-icon class="my-2">flash_on</mat-icon>
+    <div matListItemTitle>Quickie</div>
+    <div matListItemLine>10 questions</div>
+  </mat-list-item>
+  <mat-list-item
+    role="listitem"
+    (click)="selectMode(50)"
+    class="cursor-pointer h-auto py-4 px-2 sm:px-6"
+  >
+    <mat-icon class="my-2">psychology</mat-icon>
+    <div matListItemTitle>Brain Teaser</div>
+    <div matListItemLine>50 questions</div>
+  </mat-list-item>
+  <mat-list-item
+    role="listitem"
+    (click)="selectMode(100)"
+    class="cursor-pointer h-auto py-4 px-2 sm:px-6"
+  >
+    <mat-icon class="my-2">school</mat-icon>
+    <div matListItemTitle>Scholar</div>
+    <div matListItemLine>100 questions</div>
+  </mat-list-item>
+  <mat-list-item
+    role="listitem"
+    (click)="selectMode('all')"
+    class="cursor-pointer h-auto py-4 px-2 sm:px-6"
+  >
+    <mat-icon class="my-2">fitness_center</mat-icon>
+    <div matListItemTitle>Marathon</div>
+    <div matListItemLine>All questions</div>
+  </mat-list-item>
+  <mat-list-item
+    role="listitem"
+    (click)="selectMode('incorrect')"
+    class="cursor-pointer h-auto py-4 px-2 sm:px-6"
+  >
+    <mat-icon class="my-2">replay</mat-icon>
+    <div matListItemTitle>Prioritize Incorrect</div>
+    <div matListItemLine>Focus on questions you've missed</div>
+  </mat-list-item>
+</mat-list>
 
 <div class="text-center mb-8 mt-4">
   <h3 class="text-xl font-bold mt-8 mb-4">Practice by Topic</h3>
 </div>
 <mat-list role="list" class="centered-list">
-  <mat-list-item *ngFor="let section of sections" (click)="selectMode(section.name)" class="cursor-pointer h-auto py-4 px-2 sm:px-6">
+  <mat-list-item
+    *ngFor="let section of sections"
+    (click)="selectMode(section.name)"
+    class="cursor-pointer h-auto py-4 px-2 sm:px-6"
+  >
     <mat-icon class="my-2">topic</mat-icon>
     <div matListItemTitle>{{ section.name }}</div>
     <div matListItemLine>{{ section.count }} questions</div>
