--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -1,5 +1,5 @@
 <div class="text-center my-8">
-  <h3 class="text-xl font-bold">
+  <h3 class="text-xl font-bold header-primary">
     Mastery Progress
     <mat-icon
       class="align-middle text-gray-500 ml-1"
@@ -11,8 +11,8 @@
     {{ masteredQuestions }} / {{ totalQuestions }} questions mastered
   </p>
 </div>
-<div class="text-center mb-8 mt-4">
-  <h2 class="text-2xl font-bold">Choose Your Challenge</h2>
+<div class="text-center">
+  <h2 class="text-2xl font-bold header-primary mt-4">Choose Your Challenge</h2>
 </div>
 <div class="my-4 text-center">
   <a
@@ -74,7 +74,7 @@
 </mat-list>
 
 <div class="text-center mb-8 mt-4">
-  <h3 class="text-xl font-bold mt-8 mb-4">Practice by Topic</h3>
+  <h3 class="text-2xl font-bold header-primary my-4">Practice by Topic</h3>
 </div>
 <mat-list role="list" class="centered-list">
   <mat-list-item
