--- a/src/app/quiz-runner/quiz-runner.html
+++ b/src/app/quiz-runner/quiz-runner.html
@@ -6,7 +6,7 @@
   ></mat-progress-bar>
 </div>
 
-<div class="p-4 sm:p-8 pt-20">
+<div class="p-4 sm:p-8">
   <!-- Quiz View -->
   <div *ngIf="!quizFinished" class="quiz-container" [@fadeInOut]>
     <div class="flex justify-end mb-4">
