feat: add app navigation and quiz mode selection UI components

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <app-navigation *ngIf="!isHomePage"></app-navigation>
-<main class="pt-16" [class.pt-28]="showTopProgressBar">
+<main>
   <router-outlet></router-outlet>
 </main>
