--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-center my-4">
   <h3 class="text-xl font-bold header-primary">
     Mastery Progress
     <mat-icon
